more building; need to add only a method to break down the region stats dictionary of dictionaries into an array to be mooshed into a csv file to use later

--- a/wip/building_stats_extractor.ipynb
+++ b/wip/building_stats_extractor.ipynb
@@ -341,6 +341,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n",
+      "<class 'float'>\n",
+      "<class 'float'>\n",
+      "[0, 0.0004, -9.817671429, -0.727092857, 9.844985714285714, 1.6574785714285711, '12p5', '9ths', '0p5kts', '0p6m', 0, 1]\n",
+      "[0, 0.0004, -9.817671429, -0.727092857, 9.844985714285714, 1.6574785714285711, 12.5, 0.5, 6.0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "adf=pd.DataFrame({\n",
+    "    \"id\": [7058, 7059, 7072, 7054],\n",
+    "    \"name\": ['sravan', 'jyothika', 'harsha', 'ramya'],\n",
+    "    \"subjects\": ['java', 'python', 'html/php', 'php/js']\n",
+    "}\n",
+    ")\n",
+    "\n",
+    "filename=r'C:\\\\Users\\\\logan\\\\Desktop\\\\MEng\\\\Mask_RCNN\\\\.rawForcedata\\\\12p5m_9ths_0p5kts_0p6m_0deg_001_Processed_MS_50Hz.csv'\n",
+    "\n",
+    "df=pd.read_csv(filename)\n",
+    "# print(df)\n",
+    "\n",
+    "OriginalData=df[:1].values.tolist()[0]\n",
+    "# print(l)\n",
+    "\n",
+    "# l_1=l[0:7]\n",
+    "# print(l_1)\n",
+    "# l_2=l[8:11]\n",
+    "# newl=l_1+l_2\n",
+    "\n",
+    "# print(newl)\n",
+    "# print(len(newl))\n",
+    "\n",
+    "floesize=float(OriginalData[6].replace('p','.'))\n",
+    "print(type(floesize))\n",
+    "\n",
+    "ds=OriginalData[8]\n",
+    "driftspeed=float(ds.replace('kts','').replace('p','.'))\n",
+    "print(type(driftspeed))\n",
+    "\n",
+    "ithick=OriginalData[9]\n",
+    "iceThickness=float(ithick.replace('m','').replace('p',''))\n",
+    "print(type(iceThickness))\n",
+    "\n",
+    "print(OriginalData)\n",
+    "m=OriginalData[0:6]+[floesize]+[driftspeed]+[iceThickness]+[OriginalData[10]]\n",
+    "print(m)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
