--- a/wip/building_stats_extractor.ipynb
+++ b/wip/building_stats_extractor.ipynb
@@ -159,53 +159,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Region_0:228.0_0:20': {}, 'Region_0:228.0_0:-20': {}, 'Region_0:228.0_20:60': {}, 'Region_0:228.0_-20:-60': {}, 'Region_0:228.0_60:135': {}, 'Region_0:228.0_-60:-135': {}, 'Region_0:228.0_135:180': {}, 'Region_0:228.0_-135:-180': {}, 'Region_228.0:456_0:20': {}, 'Region_228.0:456_0:-20': {}, 'Region_228.0:456_20:60': {}, 'Region_228.0:456_-20:-60': {}, 'Region_228.0:456_60:135': {}}\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'Region_0.0:228_0:20'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_34600\\280343973.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[0mN0\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;34mf'Index:{N0}'\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mregionStats\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34mf\"Region_{rbounds[0]}:{rbounds[1]}_{abounds[0]}:{abounds[1]}\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     22\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"intitialize\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'Region_0.0:228_0:20'"
+      "{'Col1': 1, 'Col2': 2, 'Col3': 3}\n",
+      "   Col1  Col2  Col3\n",
+      "0     0     0     0\n",
+      "1     1     2     3 \n",
+      "\n",
+      "\n",
+      "{'col1': [1, 2], 'col2': [3, 4], 'col3': [1, 2]}\n",
+      "   col1  col2  col3\n",
+      "0     1     3     1\n",
+      "1     2     4     2\n",
+      "   col1  col2  col3\n",
+      "0     1     3     1\n",
+      "1     2     4     2\n",
+      "2    10    22   900\n"
      ]
     }
    ],
    "source": [
-    "regionStats={'Region_0:228.0_0:20':\n",
-    "{},'Region_0:228.0_0:-20':\n",
-    "{},'Region_0:228.0_20:60':\n",
-    "{},'Region_0:228.0_-20:-60':\n",
-    "{},'Region_0:228.0_60:135':\n",
-    "{},'Region_0:228.0_-60:-135':\n",
-    "{},'Region_0:228.0_135:180':\n",
-    "{},'Region_0:228.0_-135:-180':\n",
-    "{},'Region_228.0:456_0:20':\n",
-    "{},'Region_228.0:456_0:-20':\n",
-    "{},'Region_228.0:456_20:60':\n",
-    "{},'Region_228.0:456_-20:-60':\n",
-    "{},'Region_228.0:456_60:135':\n",
-    "{}}\n",
+    "a=['Col1','Col2','Col3']\n",
+    "b=[1,2,3]\n",
+    "# b=[[1,2],[3,4],[5,6]]\n",
+    "import pandas as pd \n",
     "\n",
-    "print(regionStats)\n",
-    "rbounds=[0.0,228]\n",
-    "abounds=[0,20]\n",
-    "N0=1\n",
+    "t=zip(a,b)\n",
+    "t1=dict(t)\n",
+    "print(t1)\n",
+    "for i in list(t1.keys()):\n",
+    "    temp=t1[i]\n",
+    "    t1[i]=[0,temp]\n",
+    "    \n",
+    "df=pd.DataFrame(t1)\n",
+    "print(df,\"\\n\\n\")\n",
     "\n",
-    "if not f'Index:{N0}' in regionStats[f\"Region_{rbounds[0]}:{rbounds[1]}_{abounds[0]}:{abounds[1]}\"]:\n",
-    "    print(\"intitialize\")\n",
-    "else: \n",
-    "    print(\"thefuck\")"
+    "d = {'col1': [1, 2], 'col2': [3, 4],\"col3\":[1,2]}\n",
+    "print(d)\n",
+    "dd=pd.DataFrame(d)\n",
+    "print(dd)\n",
+    "\n",
+    "cc={'col1': 10, 'col2': 22,\"col3\":900}\n",
+    "\n",
+    "\n",
+    "dd.loc[len(df)] = cc\n",
+    "# dd = dd.append(cc, ignore_index=True)\n",
+    "print(dd)\n"
    ]
   },
   {
