make some small changes after finishing dec02 training on alliancecan clusters (400epochs); results seem to be just fair

--- a/TestingGrounds/inspect_weights.ipynb
+++ b/TestingGrounds/inspect_weights.ipynb
@@ -41,7 +41,8 @@
     "# Local path to trained weights file\n",
     "COCO_MODEL_PATH = os.path.join(ROOT_DIR, \"mask_rcnn_coco.h5\")\n",
     "\n",
-    "Trained_model_weights = os.path.join(ROOT_DIR, \"mask_rcnn_iceshiptf1config_0050.h5\")\n",
+    "# Trained_model_weights = os.path.join(ROOT_DIR, \"mask_rcnn_iceshiptf1config_0050.h5\")\n",
+    "Trained_model_weights=os.path.join(ROOT_DIR,'logs','supercomp_dec02','mask_rcnn_maindec02_trainfinal_0321.h5')\n",
     "dataset_dir=ROOT_DIR+\"\\\\IceData\\\\NRC_data_multi_stage_big\" ##change to correct data dir depending what youre looking to do\n",
     "DEFAULT_LOGS_DIR = ROOT_DIR+\"\\\\.logs\""
    ]
