--- a/TestingGrounds/building_stats_extractor.ipynb
+++ b/TestingGrounds/building_stats_extractor.ipynb
@@ -2,54 +2,87 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\logan\\Desktop\\MEng\\Mask_RCNN\\.py370venv\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "c:\\Users\\logan\\Desktop\\MEng\\Mask_RCNN\\.py370venv\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "c:\\Users\\logan\\Desktop\\MEng\\Mask_RCNN\\.py370venv\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "c:\\Users\\logan\\Desktop\\MEng\\Mask_RCNN\\.py370venv\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "c:\\Users\\logan\\Desktop\\MEng\\Mask_RCNN\\.py370venv\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "c:\\Users\\logan\\Desktop\\MEng\\Mask_RCNN\\.py370venv\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
+      "c:\\Users\\logan\\Desktop\\MEng\\Mask_RCNN\\.py370venv\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:541: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "c:\\Users\\logan\\Desktop\\MEng\\Mask_RCNN\\.py370venv\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:542: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "c:\\Users\\logan\\Desktop\\MEng\\Mask_RCNN\\.py370venv\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:543: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "c:\\Users\\logan\\Desktop\\MEng\\Mask_RCNN\\.py370venv\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:544: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "c:\\Users\\logan\\Desktop\\MEng\\Mask_RCNN\\.py370venv\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:545: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "c:\\Users\\logan\\Desktop\\MEng\\Mask_RCNN\\.py370venv\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:550: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np \n",
-    "\n",
-    "classes=np.array([1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1,])\n",
-    "\n",
-    "shipIndex=np.where(classes==0)[0]\n"
+    "import mrcnn\n",
+    "from mrcnn.config import Config\n",
+    "import mrcnn.model\n",
+    "import mrcnn.visualize\n",
+    "import cv2\n",
+    "import random\n",
+    "import re\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import math\n",
+    "import bisect\n",
+    "import time\n",
+    "import statistics\n",
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pylab"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1 11]\n",
-      "11\n"
+      "thigns\n"
      ]
-    }
-   ],
-   "source": [
-    "print(shipIndex)\n",
-    "print(shipIndex[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
+    },
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "11\n"
+      "c:\\Users\\logan\\Desktop\\MEng\\Mask_RCNN\\.py370venv\\lib\\site-packages\\ipykernel_launcher.py:4: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
+      "  after removing the cwd from sys.path.\n"
      ]
     }
    ],
    "source": [
-    "for i in shipIndex:\n",
-    "    print(i)\n",
-    "    "
+    "image = cv2.imread(r\"C:\\Users\\logan\\Desktop\\MEng\\Mask_RCNN\\temp.png\") #picks a 'random' image in the kangaroo test image dir.\n",
+    "image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
+    "\n",
+    "if image != 'None': \n",
+    "    print(\"thigns\")"
    ]
   }
  ],
