--- a/TestingGrounds/building_stats_extractor.ipynb
+++ b/TestingGrounds/building_stats_extractor.ipynb
@@ -44,6 +44,79 @@
     "\n",
     "print(temp)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['one', 'has']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dire={'one':2,\"has\":5}\n",
+    "list(dire.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('C:\\\\Users\\\\logan\\\\Desktop\\\\MEng\\\\Mask_RCNN\\\\IceData',\n",
+       " 'n',\n",
+       " ['100m_9ths_1p0kts_0p4m_0deg_002_c_overhead_frame427.png',\n",
+       "  '100m_9ths_1p0kts_0p4m_0deg_002_c_overhead_frame52.png',\n",
+       "  '100m_dist_9ths_1p2kts_0p4m_0deg_001_c_overhead_frame361.png',\n",
+       "  '12p5m_9ths_0p5kts_0p6m_0deg_001_c_overhead_frame346.png',\n",
+       "  '12p5m_9ths_1p2kts_0p6m_0deg_001_c_overhead_frame221.png',\n",
+       "  '25m_7ths_1p2kts_0p6m_0deg_001_c_overhead_frame278.png',\n",
+       "  '25m_8ths_1p2kts_0p6m_0deg_001_c_overhead_frame299.png',\n",
+       "  '25m_9ths_0p5kts_1m_0deg_001_c_overhead_frame476.png',\n",
+       "  '50m_100m_9ths_1p2kts_0p4m_0deg_001_c_overhead_frame58.png',\n",
+       "  '50m_9ths_1p2kts_1m_10deg_001_c_overhead_frame47.png'])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.path.dirname(r'C:\\Users\\logan\\Desktop\\MEng\\Mask_RCNN\\IceData\\test_imgs'),'n',os.listdir(r'C:\\Users\\logan\\Desktop\\MEng\\Mask_RCNN\\IceData\\test_imgs')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1134, 1112, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "image = cv2.imread(r\"C:\\Users\\logan\\Desktop\\MEng\\Mask_RCNN\\IceData\\test_imgs\\25m_7ths_1p2kts_0p6m_0deg_001_c_overhead_frame278.png\")\n",
+    "\n",
+    "print(image.shape[0],image.shape[1])"
+   ]
   }
  ],
  "metadata": {
